src/objects/VartopiaDRS__AutomaticApprovalProcessFilterData__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>VartopiaDRS__FieldType__c</fullName>
        <label>FieldType</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__InternalName__c</fullName>
        <label>InternalName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__Operator__c</fullName>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VartopiaDRS__ParentFilterCriteria__c</fullName>
        <label>ParentFilterCriteria</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>AutomaticApprovalProcessFilterData</label>
</CustomObject>